load climate data set

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>D3 World Map Template | TechSlides</title>
+<title>Climate Justice</title>
 
 <link rel='stylesheet' href='style.css'>
 
@@ -17,8 +17,12 @@
   <div id="container"></div>
 
   <script src="js/d3.min.js"></script>
-  <script src="js/topojson.v1.min.js"></script>
-  <script src="script.js"></script>
+
+  <script type="text/javascript" src="script.js"></script>
+  <script type="text/javascript" src="js/topojson.v1.min.js"></script>
+  <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
+  <script type="text/javascript" src="js/d3-interpolate.v1.min.js"></script>
+	<script type="text/javascript" src="js/d3-scale-chromatic.v1.min.js"></script>
 
 </body>
 
