change datasets in broweser

--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
 
   <div id="container"></div>
 
+  <div id="buttons">
+    <button onclick="changeData('co-emissions-capita-2017', 'CO2 emissions (tonnes)')">Emission</button>
+    <button onclick="changeData('Climate-Risk-Index-2017', 'CRI Rank')">Climate Risk</button>
+    <button onclick="changeData('GDP-per-capita', 'GDP')">GDP</button>
+  </div>
+
+
   <script src="js/d3.min.js"></script>
 
   <script type="text/javascript" src="script.js"></script>
